--- a/jaimewebdev.com/sass/_footer.scss
+++ b/jaimewebdev.com/sass/_footer.scss
@@ -39,7 +39,6 @@
     margin: 0 auto;
     padding: .7rem;
     text-align: center;
-    width: 100%;
 
 }
 
